# neurojax

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DESIGN_PROPOSAL_BIDS_DYNAMICS.md  LICENSE  README.md  build_quit.sh  conftest.py  pyproject.toml  verify_loader.py
containers/: Dockerfile.meg  oracle-osl.Dockerfile
docs/: BIDS_DERIVATIVES_STRUCTURE.md  BUG_REPORTS.md  CUBRIC_QUESTIONS.md  FSL_MRS_UPSTREAM_ISSUES.md  OPENNEURO_ACCESS.md  RESEARCH_LOG.md  WAND_ANALYSIS_REPORT.md  analysis_pipeline_comparison.md  conf.py  index.md  meshing_and_forward_models.md  references.bib  requirements.txt  validation_results.md
examples/: analysis_loc_sub01.py  analysis_wakeman_henson.py  analyze_scree.py  analyze_ssvep.py  compare_hmm_osl.py  compare_sysid.py  compare_sysid_wand.py  demo_asr.py  demo_asr_face.py  demo_aszed_complex_ica.py  demo_beamformer.py  demo_champagne.py  demo_complex_ica.py  demo_geometry.py  demo_glm.py  demo_hcp_ya.py  demo_mne_sample.py  demo_norcia.py  demo_optimization.py  demo_phantom_synthetic.py  demo_pica_ssvep.py  demo_real_spectral.py  demo_riemann_artifact.py  demo_sindy_network.py  demo_sindy_nmm.py  demo_spm.py  demo_ssvep_priors.py  demo_uci_multiway_svd.py  download_data.py  generate_sleep_report.py  group_analysis_wakeman_henson.py  inspect_cmi.py  inspect_mat.py  inspect_ssvep_events.py  inspect_trialinfo.py  inspect_vbjax.py  probe_hbn_datalad.py  recover_dose_response.py  recover_sleep_pressure.py  replicate_fig1.py  (+15 more)
packaging/: neurojax.spec
paper/: build.sh  references.bib  render_figures.sh  wand_neurojax.Rnw  wand_neurojax.tex
slurm/: sysid_posthoc_227.err  sysid_posthoc_227.out  sysid_posthoc_253.err  sysid_posthoc_253.out  sysid_posthoc_254.err  sysid_posthoc_254.out  sysid_wand.sh  sysid_wand_216.err  sysid_wand_216.out  sysid_wand_posthoc.sh
tests/: manual_test_aszed.py  test_adversarial.py  test_adversarial_snr.py  test_analysis.py  test_analytic.py  test_entropy.py  (+36 more)
(+513 files in other folders)
