[build-system]
requires = ["uv_build >= 0.5.0"]
build-backend = "uv_build"

[project]
name = "neurojax"
version = "0.1.0"
description = "JAX-accelerated EMEG analysis toolkit — osl-dynamics-compatible, GPU-native"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mne >= 1.6.0",
    "scipy >= 1.10.0",
    "click >= 8.1.0",
    "jax >= 0.4.20",
    "jaxlib >= 0.4.20",
    "jaxctrl >= 0.1.0",
    "equinox >= 0.11.0",
    "diffrax >= 0.5.0",
    "lineax >= 0.0.1",
    "optimistix >= 0.0.1",
    "optax >= 0.1.9",
    "distrax >= 0.1.0",
    "jaxtyping >= 0.2.20",
    "scico>=0.0.1",
    "signax >= 0.1.0",
    "pyxdf >= 1.17.0",
    "numpy >= 1.26.0",
    "requests >= 2.25.0",
    "tqdm",
    "tensorstore",
    "chex",
    "vbjax >= 0.0.1",
    "dandi >= 0.50.0",
    "pynwb >= 2.0.0",
    "fsspec >= 2023.0.0",
    "s3fs >= 2023.0.0",
    "jraph >= 0.0.6.dev0",
    "jinns>=1.5.1",
    "anthropic>=0.86.0",
    "nibabel>=5.4.2",
    "surfplot>=0.2.0",
    "brainspace>=0.1.22",
    "specparam>=2.0.0rc6",
    "openmeeg>=2.5.16",
    "scikit-image>=0.26.0",
]

[project.scripts]
neurojax = "neurojax.cli:main"

[project.optional-dependencies]
bench = [
    "cma >= 3.3.0",
    "llamea",
]
test = [
    "pytest >= 7.0.0",
    "sybil",
    "pytest-cov",
    "ruff >= 0.1.0",
    "matplotlib",
    "tqdm",
    "openneuro-py",
    "pandas",
    "scikit-learn",
]
doc = [
    "sphinx",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinxcontrib-bibtex",
    "sphinx-autodoc-typehints",
]

[tool.pytest.ini_options]
addopts = "--cov=neurojax --cov-report=term-missing"
testpaths = [
    "tests",
    "docs",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.uv.sources]
jaxctrl = { path = "../jaxctrl", editable = true }
vbjax = { git = "https://github.com/ins-amu/vbjax" }

[tool.ruff.lint]
select = ["E", "F", "I"]
